objects/Partner_Discount__c/Partner_Discount__c.object-meta.xml
<CustomObject>
    <label>Partner Discount</label>
    <nameField>
        <displayFormat>PDN-{0000000}</displayFormat>
        <label>PDN</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Discount</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>