objects/Partner_Discount__c/fields/Discount_Tier__c.field-meta.xml
<CustomField>
    <fullName>Discount_Tier__c</fullName>
    <description>Discount Tier based on Opportunity Owner</description>
    <inlineHelpText>Discount Tier based on Opportunity Owner</inlineHelpText>
    <label>Discount Tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>