objects/Partner_Discount__c/fields/Min_Core_Band__c.field-meta.xml
<CustomField>
    <fullName>Min_Core_Band__c</fullName>
    <description>Minium Core</description>
    <inlineHelpText>Minium Core</inlineHelpText>
    <label>Min Core Band</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>