objects/Partner_Discount__c/fields/Opp_Reg_Type__c.field-meta.xml
<CustomField>
    <fullName>Opp_Reg_Type__c</fullName>
    <description>Opp Reg Type</description>
    <inlineHelpText>Opp Reg Type</inlineHelpText>
    <label>Opp Reg Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Created</fullName>
            </value>
            <value>
                <fullName>Tanium Created</fullName>
            </value>
            <value>
                <fullName>Non-Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>