objects/Partner_Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opp_Reg_Type__c</columns>
    <columns>Discount_Tier__c</columns>
    <columns>Min_Core_Band__c</columns>
    <columns>Max_Core__c</columns>
    <columns>Discount_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>